--- a/fe/.eslintrc
+++ b/fe/.eslintrc
@@ -3,7 +3,8 @@
 	"env": {"browser": true},
 	"rules": {
 		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-		"linebreak-style": 0
+		"linebreak-style": 0,
+		"react/forbid-prop-types": 0
 	},
-	"parser": "babel-eslint",
+	"parser": "babel-eslint"
 }
