--- a/fe/.eslintrc
+++ b/fe/.eslintrc
@@ -4,7 +4,8 @@
 	"rules": {
 		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
 		"linebreak-style": 0,
-		"react/forbid-prop-types": 0
+		"react/forbid-prop-types": 0,
+		"no-unused-vars": 0
 	},
 	"parser": "babel-eslint"
 }
